feature/contact-form - Add new contact form page

--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Contact form</title>
 </head>
 <body>
-$END$
+    <h1>Contact form</h1>
 </body>
 </html>
