--- a/index.html
+++ b/index.html
@@ -31,14 +31,7 @@
         <br />
         <br />
 
-
-        <p>Initial test from feature branch</p>
-
-        <p>test from test1 feature branch - let's stash it <p>
-
-        <h3>master branch chenged</h3>
-
-        <p>Initial test from feature branch</p>
+        <p>Let's do some changes</p>
 
         <p>Nullam quis elit id magna condimentum vulputate vitae nec lorem. Sed tincidunt sem enim, ac feugiat felis lacinia eget. Suspendisse dictum auctor pretium. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum vitae venenatis sapien. Praesent dapibus erat consequat, scelerisque erat ut, viverra dolor. In lobortis neque sit amet lobortis porttitor. In sed erat nec nunc volutpat tempus.</p>
 
